fixed scrollbar

--- a/index.css
+++ b/index.css
@@ -28,6 +28,10 @@ html {
 	overflow-x: hidden;
 }
 
+::-webkit-scrollbar-corner {
+	background: rgba(0,0,0,0);
+}
+
 body {
 	margin: 0;
 	padding: 0;
